--- a/Multi_Level_DataFrames.ipynb
+++ b/Multi_Level_DataFrames.ipynb
@@ -6,7 +6,7 @@
       "name": "Multi-Level-DataFrames.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNY8wUcwwiMr6/baPNIkip2",
+      "authorship_tag": "ABX9TyOPV6tir4niQLP4aUKJgNWz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
       },
       "source": [
         "'''\n",
-        "Functions - append, add, or insert a row data or a column into a Pandas DataFrame with multi-level index and multi-level columns\n",
+        "Functions - append, add, or insert a row data or a column data into a Pandas DataFrame with multi-level row/column index\n",
         "Byunggu (\"Dan\") Yu\n",
         "2021-10-21\n",
         "'''"
@@ -51,9 +51,9 @@
       "source": [
         "README\n",
         "\n",
-        "In data ETL using Python Pandas, the programming is often hindered by the ad hoc coding for appending, adding, or inserting a single row or column into a Pandas DataFrame. This is pronounced when the DataFrame has multi-level index and multi-level columns. On the other hand, dropping. removing, deleting a single row or column from a DataFrame is easy and does not incur any delay in the development.\n",
+        "In data ETL using Python Pandas, programming is often hindered by ad hoc coding for appending, adding, or inserting a single row or column into a DataFrame. This is pronounced when the DataFrame has multi-level row and column indices. On the other hand, dropping. removing, deleting a single row or column from a DataFrame is easy and does not incur any delay in the development.\n",
         "\n",
-        "This project provides two reusable functions - one for appending/adding/inserting a row into a DataFrame; the other for appending/adding/inserting a column into a DataFrame. The provided functions can be simply copied into any development project and conveniently used by the developers. The functions support multi-level and multi-columns DataFrames.\n",
+        "This repository contains two reusable functions - one for appending/adding/inserting a row; the other for appending/adding/inserting a column. The provided functions can be simply copied into any development project and conveniently used by the developers. The functions support multi-level-indexed DataFrames.\n",
         "\n",
         "Byunggu (\"Dan\") Yu\n",
         "2021-10-21\n"
@@ -73,7 +73,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,13 +87,13 @@
         "    # Add a row to any DF (supports both single-level and multi-level DataFrame\n",
         "    # df: DataFrame\n",
         "    # row: new row values (list)\n",
-        "    # idx: the index of the new row (tuple if multi-level)\n",
+        "    # idx: the index label of the new row (tuple if multi-level)\n",
         "    \n",
         "    df2=pd.concat([df,pd.DataFrame({df.columns[i]:row[i] for i in range(0,len(row))},index=[idx])], axis=0)\n",
         "    df2.columns.names=df.columns.names\n",
         "    return df2"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,12 +107,12 @@
         "    # Add a col to any DF (supports both single-level and multi-level DataFrame\n",
         "    # df: DataFrame\n",
         "    # col: new col values (list)\n",
-        "    # col_label: the column label (tuple if multi-level)\n",
+        "    # col_label: the column label of the new column (tuple if multi-level)\n",
         "    \n",
         "    df2=pd.concat([df,pd.DataFrame({col_label:col},index=df.index)], axis=1)\n",
         "    return df2"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -121,7 +121,8 @@
         "id": "qaNfhJyWTekr"
       },
       "source": [
-        "Testing and Derivation"
+        "\n",
+        "##Testing\n"
       ]
     },
     {
@@ -145,7 +146,7 @@
         "df=pd.DataFrame([r1,r2,r3,r4]).T\n",
         "df"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -232,7 +233,7 @@
         "outputId": "b16f0ba5-8112-40a6-d358-efd7ac818b42"
       },
       "source": [
-        "# Setting the names of multi-level index and columns\n",
+        "# Setting the names of multi-level row and column indices\n",
         "\n",
         "idx=pd.MultiIndex.from_tuples([(0,0),(0,1),(1,0),(1,1)],names=['index 1', 'index 2'])\n",
         "cols=pd.MultiIndex.from_tuples([('a','c1'),('a','c2'),('b','c1'),('b','c2')], names=['columns 1', 'columns 2'])\n",
@@ -240,7 +241,7 @@
         "df.columns=cols\n",
         "df"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -355,7 +356,7 @@
         "df2=df_add_row(df,[5,9,'e',8],(2,0))\n",
         "df2"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,10 +477,10 @@
       "source": [
         "# Dropping a row (easy, no function development needed)\n",
         "\n",
-        "df2.drop((0,0), axis=0, inplace=True) # default axis=0 (row drop by index value)\n",
+        "df2.drop((0,0), axis=0, inplace=True) # default axis=0 (row drop by row label)\n",
         "df2"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -595,7 +596,7 @@
         "df2=df_add_col(df,[5,6,7,8],('c','c1'))\n",
         "df2"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,10 +715,10 @@
       "source": [
         "# Dropping a column (easy, no function development needed)\n",
         "\n",
-        "df2.drop(('c','c1'),axis=1,inplace=True) # axis=1 (col drop by col name)\n",
+        "df2.drop(('c','c1'),axis=1,inplace=True) # axis=1 (col drop by col label)\n",
         "df2"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
